[package]
name = "wping"
version = "0.3.0"
description = "A ping command that tries to provide more useful output"
authors = ["Angelos Oikonomopoulos <a.oikonomopoulos@vu.nl>"]
license = "GPL-3.0"
keywords = ["ping", "network"]
readme = "README.md"
repository = "https://github.com/aoikonomopoulos/wping"

# build-dependencies copied over from pnet_packet
# needed for ICMPv6 Echo abstractions
[build-dependencies.syntex]
version = "0.42"

[build-dependencies.pnet_macros]
version = ">=0.15"

[build-dependencies.glob]
version = "0.2"

[dependencies.pnet]
version = "0.20.0"

[dependencies.pnet_macros_support]
version = "0.20.0"

[dependencies.libc]
version = "0.2"

[dependencies.argparse]
version = "0.2"

[dependencies.num]
version = "0.1.36"

[dependencies.resolve]
version = "0.1.2"

[dependencies.chrono]
version = "0.3.0"

[dependencies.byteorder]
version = "1.0.0"